attempt #2 to fix overflow on mobile

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   font-weight: normal;
   max-width: 100%;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 html {
   font-family: Arial, Helvetica, sans-serif;
